<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchView"
        android:icon="@mipmap/search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/list_icon"
        android:icon="@mipmap/list"
        android:title="@string/list"
        app:showAsAction="ifRoom" />

</menu>
